# battle-arena

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.superpowers/sdd/: wiring-report.md
backend/: .env.example  README.md  requirements.txt
backend/app/: auth.py  chat.py  config.py  db.py  elo.py  main.py  models.py  privy.py
backend/scripts/: buyback_bot_nfts.py  referrals.py  verify_pack_battle.py  verify_pack_pull.py  verify_pnft_transfer.py  verify_privy_sign.py  verify_turbo_pull.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_battle_fees.py  test_bots.py  test_chain_mock.py  (+26 more)
docs/: ONCHAIN.md  STARTUP.md
onchain/: Anchor.toml  README.md
onchain/programs/battle_arena/: Cargo.toml
onchain/programs/battle_arena/src/: edge.rs  error.rs  hashing.rs  instructions.rs  lib.rs  oracle.rs  pack_state.rs  rules.rs  state.rs
onchain/programs/battle_arena/src/instructions/: commit.rs  initialize.rs  join.rs  pack_create.rs  pack_deposit.rs  pack_join.rs  pack_settle_direct.rs  pack_timeout.rs  resolve.rs  reveal.rs  settle.rs  timeout.rs
onchain/programs/battle_arena/tests/: equivalence.rs  integration.rs  pack_battle.rs  rejections.rs  settlement.rs  test_initialize.rs
onchain/programs/battle_arena/tests/common/: mod.rs
onchain/programs/battle_arena/tests/fixtures/: attestation_vectors.json  vectors.json
onchain/programs/battle_arena/tests/pack_common/: mod.rs
oracle/: .env.example  .gitignore  README.md  requirements.txt
src/: App.tsx  index.css  main.tsx
(+332 files in other folders)
