[package]
name = "battle_arena"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "battle_arena"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"
sha2 = "0.10"
solana-instructions-sysvar = "3.0.1"
solana-sdk-ids = "3.1.0"

[dev-dependencies]
litesvm = { version = "0.10.0", features = ["precompiles"] }
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-instruction = "3.0.1"
solana-pubkey = "3.0.0"
solana-clock = "3.1.0"
solana-program-pack = "3.0.1"
solana-program-option = "3.1.0"
spl-token-interface = "2.0.0"
solana-system-interface = { version = "3.2.0", features = ["bincode"] }
ed25519-dalek = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
